@@ -1339,6 +1339,8 @@
 2263,0,0,0,0,30000,0
 //-- NC_SELFDESTRUCTION
 2267,3500,500,0,0,0,0
+//-- NC_SHAPESHIFT
+2268,3000,2000,0,0,300000,0
 //-- NC_INFRAREDSCAN
 2270,1000,500,15000,0,10000,0
 //-- NC_ANALYZE
